--- a/.github/workflows/json_verifier.yaml
+++ b/.github/workflows/json_verifier.yaml
@@ -8,21 +8,15 @@ on:
       - 'src/data.json'
 
 jobs:
-  validate-json:
+  verify-json-validation:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Validate JSON syntax
-        uses: docker://python:3
-        with:
-          entrypoint: sh
-          args: -c "pip install jsonschema && jsonschema --instance src/data.json src/template-data.json"
+      - uses: actions/checkout@v1
+      - name: Validate JSON
+        uses: docker://orrosenblatt/validate-json-action:latest
+        env:
+          INPUT_SCHEMA: /path/to/schema.json
+          INPUT_JSONS: /path/to/file.json,/path/to/another/file.json
 
       - name: Fail workflow on validation error
         if: ${{ failure() }}
