--- a/.github/workflows/json_verifier.yaml
+++ b/.github/workflows/json_verifier.yaml
@@ -15,8 +15,8 @@ jobs:
       - name: Validate JSON
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
-          INPUT_SCHEMA: /path/to/schema.json
-          INPUT_JSONS: /path/to/file.json,/path/to/another/file.json
+          INPUT_SCHEMA: src/template-data.json
+          INPUT_JSONS: src/data.json
 
       - name: Fail workflow on validation error
         if: ${{ failure() }}
