--- a/.github/workflows/json_verifier.yaml
+++ b/.github/workflows/json_verifier.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Validate JSON
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
-          INPUT_SCHEMA: src/template-data.json
+          INPUT_SCHEMA: src/schema.json
           INPUT_JSONS: src/data.json
 
       - name: Fail workflow on validation error
