--- a/.github/workflows/json_verifier.yaml
+++ b/.github/workflows/json_verifier.yaml
@@ -1,38 +1,17 @@
-name: Validate JSON
+name: Validate JSONs
 
-on:
+on: 
   push:
     paths:
-      - "src/data.json"
+      "src/data.json"
 
 jobs:
-  validate-json:
+  verify-json-validation:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Install jsonschema
-        run: pip install jsonschema
-
+      - uses: actions/checkout@v1
       - name: Validate JSON
-        run: |
-          JSON_FILE=src/data.json
-          SCHEMA_FILE=src/schema.json
-          JSON_SCHEMA=$(cat $SCHEMA_FILE)
-          JSON_DATA=$(cat $JSON_FILE)
-          python -c "import jsonschema; jsonschema.validate(json.loads('$JSON_DATA'), json.loads('$JSON_SCHEMA'))"
-
-      - name: Set output
-        if: ${{ job.status == 'success' }}
-        run: echo "JSON file is valid!"
-        shell: bash
+        uses: docker://orrosenblatt/validate-json-action:latest
         env:
-          VALIDATED: "true"
-
-      - name: Set output
-        if: ${{ job.status != 'success' }}
-        run: echo "JSON file is not valid!"
-        shell: bash
-        env:
-          VALIDATED: "false"
+          INPUT_SCHEMA: src/schema.json
+          INPUT_JSONS: src/data.json
