--- a/.github/workflows/json_verifier.yaml
+++ b/.github/workflows/json_verifier.yaml
@@ -1,9 +1,10 @@
 name: Validate JSONs
-
-on: 
-  push:
+  
+on:
+  pull_request:
+    types: [opened, reopened]
     paths:
-      - "src/data.json"
+        - "src/data.json"
 
 jobs:
   verify-json-validation:
